# blogsauce

./: .gitignore  config.toml  splashes.txt  todo.md
blog_api/: Cargo.toml  comments.sqlite
blog_api/comment_server/: main.rs
blog_api/src/: lib.rs  main.rs
blog_api/src/db/: mod.rs  statements.rs
blog_api/src/models/: comment.rs  ip.rs  mod.rs  post.rs  shout.rs  star.rs  user.rs
blog_api/src/server/: mod.rs  util.rs
blog_api/src/server/endpoints/: mod.rs
blog_api/src/server/endpoints/comments/: mod.rs
blog_api/src/server/endpoints/shouts/: mod.rs
blog_api/src/server/endpoints/splashes/: mod.rs
blog_api/src/server/endpoints/stars/: mod.rs
blog_api/src/server/endpoints/user/: mod.rs
content/: post1.md
content/about/: _index.md
content/archive/: _index.md
content/fun/: _index.md
content/gallery/: _index.md
content/posts/: _index.md  post2.md  post3.md
js/: api.js  main.js  modal.js  snippets.js
splashes/: splashes.txt
static/css/: style.css
static/fonts/: stylesheet.css
static/js/: api.js  blog.js  modal.js  shoutbox.js  snippets.js  title_bar.js
templates/: about.html  archive.html  base.html  fun.html  gallery.html  index.html  section.html
