[package]
name = "blog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38.0", features = ["jiff"] }
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server","http1"] }
rand = "0.9.2"
smol = "2.0.2"
smol-hyper = "0.1.1"
json = "0.12.4"
thiserror = "2.0.17"
jiff = "0.2.18"
mimalloc = "0.1.48"
ammonia = "4.1.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
areq-smol = { version = "0.1.0-alpha5", features = ["http1", "tls", "webpki-roots"] }
async-channel = "2.5.0"
async-executor = "1.13.3"
easy-parallel = "3.3.1"
futures-lite = "2.6.1"
duration-str = "0.18.0"
clap = { version = "4.5.54", features = ["derive"] }
urlencoding = "2.1.3"
hotwatch = "0.5.0"
async-broadcast = "0.7.2"
async-stream = "0.3.6"

